# Echo

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
apps/api/: .env.example  pyproject.toml  railway.toml  railway.worker.toml
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/auth/: dependencies.py  middleware.py  security.py
apps/api/app/db/: client.py  repositories.py
apps/api/app/models/: __init__.py  cognitive.py  echo.py  emmy.py  finetune.py  identity.py  memory.py  mind_model.py  schema.py  session.py  subject.py
apps/api/app/routers/: auth.py  echo.py  echo_conversation.py  emmy.py  emmy_conversation.py  finetune.py  groups.py  identity.py  memories.py  mind.py  profile.py  (+3 more)
apps/api/echo_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: test_auth_dependencies.py  test_cognitive_engine.py  test_connections.py  test_consent_sync.py  test_cors.py  test_dashboard_summary.py  test_delete_all_memories.py  test_demo_api.py  test_echo_conversation.py  test_echo_conversation_pipeline.py  test_emmy_conversation.py  test_emmy_conversation_pipeline.py  test_family_groups.py  test_family_sharing_empty_states.py  test_gemini_live.py  test_identity_layer.py  test_memory_extractor.py  test_memory_index_row_normalization.py  test_memory_indexing.py  test_memory_retrieval_regression.py  test_memory_save.py  test_migration_idempotency.py  test_mind_model_builder.py  test_retrieval_policy.py  test_security.py  test_session_row_normalization.py  test_structured_memory_pipeline.py  test_username_system.py
(+138 files in other folders)
