[project]
name = "echo-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "gunicorn>=21.2.0",
  "pydantic-settings>=2.4,<3",
  "asyncpg>=0.29.0",
  "PyJWT>=2.8.0",
  "httpx>=0.27.0",
  "celery>=5.4.0",
  "redis>=5.0.0",
  "openai>=1.14.0",
  "pinecone-client>=3.2.2",
  "python-multipart>=0.0.9",
  "email-validator>=2.0.0"
]

[project.optional-dependencies]
live = [
  "openai>=1.0",
  "supabase>=2.0",
  "pinecone>=5.0",
  "celery>=5.4",
  "redis>=5.0"
]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

